# SIGNIA

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Deployment.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  Signia_monorepo_layout
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql.yml  node.yml  rust.yml
console/interface/: README.md  package.json  tsconfig.json
console/interface/src/: index.ts
console/interface/src/handlers/: how_to_deploy.ts  troubleshooting.ts  what_is_signia.ts
console/interface/src/prompts/: style.md  system.md
console/interface/src/search/: indexer.ts  ranker.ts  retriever.ts
console/interface/src/sources/: docs.ts  examples.ts  schemas.ts
console/web/: README.md  package.json
console/web/src/app/: layout.tsx  page.tsx
console/web/src/app/compile/: page.tsx
console/web/src/app/interface/: page.tsx
console/web/src/app/registry/: page.tsx
console/web/src/app/verify/: page.tsx
console/web/src/components/: ArtifactList.tsx  CompileForm.tsx  Footer.tsx  Header.tsx  ProofViewer.tsx  RegistryTable.tsx  SchemaViewer.tsx
console/web/src/lib/: api.ts  config.ts  solana.ts
console/web/src/styles/: globals.css
crates/signia-api/: Cargo.toml
crates/signia-cli/: Cargo.toml  README.md
crates/signia-cli/src/: args.rs  main.rs  output.rs
crates/signia-cli/src/cmd/: compile.rs  doctor.rs  fetch.rs  mod.rs  plugins.rs  publish.rs  verify.rs
crates/signia-cli/src/io/: export.rs  input.rs  mod.rs
crates/signia-cli/src/solana/: client.rs  mod.rs  tx.rs
crates/signia-core/: Cargo.toml
crates/signia-core/src/: config.rs  lib.rs  version.rs
crates/signia-core/src/determinism/: hashing.rs  normalize_text.rs  stable_sort.rs
crates/signia-core/src/model/: mod.rs
crates/signia-core/src/pipeline/: compile.rs  mod.rs  parse.rs  stages.rs  verify.rs
crates/signia-plugins/: Cargo.toml  README.md
crates/signia-plugins/src/: registry.rs  sandbox.rs  spec.rs
crates/signia-plugins/src/builtin/api/: normalize.rs
crates/signia-plugins/src/builtin/config/: mod.rs
crates/signia-plugins/src/builtin/dataset/: checksum.rs
crates/signia-plugins/src/builtin/repo/: github_fetch.rs  mod.rs  tree_walk.rs
crates/signia-plugins/src/builtin/spec/: link_graph.rs  mod.rs
crates/signia-plugins/src/builtin/workflow/: mod.rs  validate.rs  yaml.rs
crates/signia-plugins/src/tests/: plugin_contract.rs
crates/signia-solana-client/: Cargo.toml
crates/signia-solana-client/src/: constants.rs  lib.rs  pda.rs  registry_client.rs
crates/signia-store/: Cargo.toml
devcontainer/: Dockerfile  devcontainer.json
docs/: glossary.md  overview.md  roadmap.md
docs/ determinism/: canonicalization.md  determinism-contract.md
docs/ security/: supply-chain.md  trust-boundaries.md
docs/api/: auth.md  error-codes.md  openapi.yaml  rate-limits.md
docs/cli/: config.md  installation.md  usage.md
docs/console/: interface-module.md
docs/onchain/: accounts.md  instructions.md  pda-layout.md  upgrades.md
docs/schemas/: examples.md  schema-v1.md
infra/docker/: api.Dockerfile  console.Dockerfile  interface.Dockerfile
root/: CITATION.cff  Makefile  NOTICE  biome.json  clippy.toml  deny.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
schemas/: README.md
schemas/v1/: manifest.json  proof.json  schema.json
schemas/v1/examples/: workflow.schema.json
tests/e2e/: console_smoke.ts  docker_compose_up.rs
tests/fixtures/repo_small/: Cargo.toml  README.md
tests/fixtures/repo_small/src/: lib.rs
tests/fixtures/workflow_small/: pipeline.yml
tests/integration/: api_compile_flow.rs  determinism_roundtrip.rs  proof_verification.rs  publish_devnet_flow.rs  schema_validation.rs
