[package]
name = "signia-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for SIGNIA (compile/verify/fetch/plugins/doctor/publish)"
repository = "https://github.com/your-org/signia"
readme = "README.md"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
url = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
termcolor = "1"

# Workspace crates
signia-core = { path = "../signia-core" }
signia-plugins = { path = "../signia-plugins" }
signia-store = { path = "../signia-store" }

[dev-dependencies]
tempfile = "3"
