[package]
name = "signia-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core primitives for SIGNIA: schema/manifest/proof types, canonicalization, hashing, and deterministic bundle utilities."
repository = "https://github.com/your-org/signia"
homepage = "https://signia.dev"
readme = "README.md"
keywords = ["solana", "schema", "determinism", "hashing", "merkle"]
categories = ["data-structures", "cryptography", "development-tools"]
rust-version = "1.75"

[lib]
name = "signia_core"
path = "src/lib.rs"

[features]
default = ["sha256", "blake3", "canonical-json"]
sha256 = ["dep:sha2"]
blake3 = ["dep:blake3"]
canonical-json = ["dep:serde_json", "dep:serde", "dep:itertools"]
parallel = ["dep:rayon"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Canonicalization helpers
itertools = { version = "0.12", optional = true }

# Hashing
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1.5", optional = true }

# Utilities
hex = "0.4"
bytes = "1.6"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1.8", features = ["v4"] }

# Filesystem/paths for artifact normalization
path-clean = "1.0"

# Optional parallelism
rayon = { version = "1.10", optional = true }

[dev-dependencies]
assert_matches = "1.5"
proptest = "1.4"
tempfile = "3.10"
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
